--- a/start.html
+++ b/start.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>fourth</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <p>i am doing my fourth git repo,fourth repo</p>
-    <p>ammuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuu</p>
+    <p id="a">ammuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuuu</p>
+    <p>abbbuuu</p>
+    <p>
+        <h2>my firsy css box
+            <h3> content padding border maegin content content padding border maegin content content padding border maegin content content padding border maegin content</h3>
+        </h2>
+    </p>
 </body>
 </html>
