--- a/start.html
+++ b/start.html
@@ -16,5 +16,8 @@
             <h3> content padding border maegin content content padding border maegin content content padding border maegin content content padding border maegin content</h3>
         </h2>
     </p>
+    <img src="https://media.istockphoto.com/id/696478774/photo/lovebird-kiss.jpg?s=612x612&w=0&k=20&c=fTD5Z3ozRWRzkkitL3hhJejSwbf_ZXZyktgxVMOJd4I=">
+    love birds<br>
+    <i><b>love birds</b></i>
 </body>
 </html>
