--- a/start.html
+++ b/start.html
@@ -20,5 +20,11 @@
     love birds<br>
     <i><b>love birds</b></i>
     <img src="https://cdn.pixabay.com/photo/2015/04/19/08/32/marguerite-729510_1280.jpg">
+    <div>  
+        <h2>New Blog</h2>
+        <h3>I fell motiveted, i feel motiveted, i fell motiveted i fell motiveted i fell motiveted i fell motiveted i fell motiveted i fell motiveted i fell motiveted</h3>
+    </div>
+    
+    
 </body>
 </html>
