--- a/start.html
+++ b/start.html
@@ -23,6 +23,7 @@
     <div>  
         <h2>New Blog</h2>
         <h3>I fell motiveted, i feel motiveted, i fell motiveted i fell motiveted i fell motiveted i fell motiveted i fell motiveted i fell motiveted i fell motiveted i fell motiveted ggggggggggggggggggggggg</h3>
+        <h3>amuuuuuuuuuuuuuu</h3>
     </div>
     
     
